<resources>
    <string name="app_name">DoAnMobile</string>
    <string name="simple_stu">Saigon Technology University</string>

    <string name="simple_login">Login</string>
    <string name="simple_loginError">Wrong account</string>
    <string name="simple_listProduct">List Product</string>
    <string name="simple_catagory">Catagory : </string>
    <string name="simple_addProduct">Add Product</string>
    <string name="simple_addCategory">Add Category</string>
    <string name="simple_detailproduct">Detail Product</string>

    <string name="simple_logout">Logout</string>
    <string name="simple_logoutMessage">Are you sure you want to exit?</string>
    <string name="simple_about">About</string>
    <string name="simple_register">Register</string>
    <string name="simple_yes">Yes</string>
    <string name="simple_no">No</string>

    <string name="simple_username">Username</string>
    <string name="simple_password">Password</string>

    <string name="simple_codeProduct">Product Code</string>
    <string name="simple_nameProduct">Product Name</string>
    <string name="simple_costProduct">Price (VND)</string>
    <string name="simple_volumetric"> Volumetric (ml)</string>
    <string name="simple_production"> Production</string>
    <string name="simple_add">Add</string>

    <string name="simple_edit">Edit</string>
    <string name="simple_del">Del</string>
    <string name="simple_exit">Exit</string>

    <string name="simple_idCategory">ID Category</string>
    <string name="simple_nameCategory">Name Category</string>
    <string name="simple_listCategory">List Category :</string>

    <string name="simple_messErrorSpace">Please enter a full</string>
    <string name="simple_messAddSuccess">Add Success</string>
    <string name="simple_messDelSuccess">Del Success</string>
    <string name="simple_messEditSuccess">Edit Success</string>
    <string name="simple_messErrorChoose">Please choose an catagory</string>

    <string name="simple_alertChooseImage">Please select image</string>
    <string name="simple_chooseImage">Choose image</string>
    <string name="simple_photo">Photo</string>
    <string name="simple_camera">Camera</string>
    <string name="simple_removeMessage">Are you sure you want to remove?</string>
    <string name="simple_removeTitle">Confirm the deletion</string>
    <string name="simple_errorServices">Cant connect to play services</string>


    <string name="simple_nameApp">Cargo management application</string>
    <string name="simple_author">Author : </string>


    <string name="simple_editMessage">Are you sure you want to edit?</string>
    <string name="simple_editTitle">Confirm the edit</string>



</resources>
