<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/catagory_menu"
        android:title="@string/simple_addCategory"
        android:icon="@drawable/categorybutton"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_menu"
        android:title="@string/simple_addProduct"
        android:icon="@drawable/addbutton"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/logout_menu"
        android:title="@string/simple_logout"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/about_menu"
        android:title="@string/simple_about"
        android:orderInCategory="100"/>


</menu>