<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/simple_addCategory"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="18dp"
        android:paddingLeft="5dp"
        android:id="@+id/txtAddIdCategory"
        android:text="@string/simple_idCategory"/>

    <EditText
        android:id="@+id/edtAddNameCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/simple_nameCategory" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_marginRight="20dp"
            android:id="@+id/btnEditCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_edit"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:layout_marginRight="20dp"
            android:id="@+id/btnAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_add"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_del"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#f00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_listCategory"/>


    <ListView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvAddCategory" />

</LinearLayout>
