<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/simple_addProduct"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/simple_codeProduct"
                android:textSize="23sp"
                android:id="@+id/txtAddId"/>

            <EditText
                android:id="@+id/edtAddName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/simple_nameProduct" />

            <EditText
                android:id="@+id/edtAddCost"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/simple_costProduct" />

            <EditText
                android:id="@+id/edtAddVolumetric"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/simple_volumetric" />

            <EditText
                android:id="@+id/edtAddProduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/simple_production" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="23dp"
                    android:text="@string/simple_catagory"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerCategory" />
            </LinearLayout>



            <ImageView
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:src="@drawable/cocacola"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_add"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
