<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#e43f3f"
    android:padding="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername"
        android:hint="@string/simple_username"
        android:textColorHint="#fff"
        android:textSize="20dp"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/simple_password"
        android:textColorHint="#fff"
        android:textSize="20dp"
        android:textColor="#fff"
        android:paddingTop="20dp"
        android:id="@+id/txtPassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_login"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/btnLogin"
        android:background="#cc1d1d"
        android:textColor="#fff"
        android:textSize="25dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center" />

    <TextView android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="No account yet? Create one"
        android:gravity="center"
        android:textSize="16dip"
        android:textColor="#fff"/>

</LinearLayout>