<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/imgEditProductFM"
                android:src="@drawable/hinh"
                android:layout_width="120dp"
                android:layout_height="150dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ma san pham"
                android:textAlignment="center"
                android:textSize="27dp"
                android:id="@+id/txtEditIdFM"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="21dp"
                    android:text="@string/simple_nameProduct"/>

                <EditText
                    android:id="@+id/edtEditNameFM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="21dp"
                    android:text="@string/simple_costProduct"/>

                <EditText
                    android:id="@+id/edtEditPriceFM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="21dp"
                    android:text="@string/simple_volumetric"/>

                <EditText
                    android:id="@+id/edtEditVolumetricFM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="21dp"
                    android:text="@string/simple_production"/>

                <EditText
                    android:id="@+id/edtEditProductionFM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="21dp"
                    android:text="@string/simple_catagory"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerEditCategoryFM" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnEditFM"
                    android:text="@string/simple_edit"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnDelFM"
                    android:text="@string/simple_del"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <!--<Button-->
                    <!--android:id="@+id/btnExitEditFM"-->
                    <!--android:text="@string/simple_exit"-->
                    <!--android:layout_margin="20dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content" />-->

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>